--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -361,7 +361,7 @@
             <div class="container">
                 <div class="section_header">
                     <h3>Course Curriculum</h3>
-                    <h5 class="highlighted-text">কোর্সের সাথে থাকছে Recorded <span style="color: #11a849;">Class+Bonus👉৩ মাসের Live Class</span></h5>
+                    <h5 class="highlighted-text">কোর্সের সাথে থাকছে Recorded <span style="color: #11a849;">Class + 👉৩ মাসের Live Class</span></h5>
                 </div>
                 <div class="flex" style="justify-content: center; color: red;">
                     <h3><del>১৫০০০৳</del></h3>
