--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -31,10 +31,9 @@
                         <div class="flex teacher">
                                 <!-- <span><img src="https://cdn.jsdelivr.net/gh/mdsibgatullah/keeron/assets/images/Elta-Karim.jpg" alt="EltaKarim"></span> -->
                             <div>
-                                <h4>Md Anis Islam</h4>
-                                
-                                <p>Certified Chinese language Teacher,</p>
-                                <p>University of Dhaka</p>
+                                <h4 style="color: #007BFF; font-weight: bold; font-size: 20px; margin-bottom: 8px;">Md Anis Islam</h4>
+                                <p style="font-size: 16px; font-weight: 500; margin: 4px 0;">Certified Chinese language Teacher,</p>
+                                <p style="font-size: 16px; font-weight: 500; margin: 4px 0;">University of Dhaka</p>
                             </div>
                         </div>
                     </div>
