--- a/template/templates/template/china2.html
+++ b/template/templates/template/china2.html
@@ -4,8 +4,8 @@
             <div class="container">
                 <div class="hero_data">
                     <div class="hero_text">
-                        <h2>চাইনিজ ভাষা (HSK1-3) শিখার পরিপূর্ণ কোর্স</h2>
-                        <p class="text">একটি পূর্ণাঙ্গ কোর্স যা আপনাকে চাইনিজ ভাষার সব প্রধান ক্ষেত্রগুলো সহজে আয়ত্ত করতে সাহায্য করবে – চাইনিজ পড়া, কথা বলা, শোনা এবং লেখা। এই এক কোর্সেই আপনি চাইনিজ ভাষার সব দক্ষতা উন্নত করতে পারবেন।</p>
+                        <h2>চাইনিজ ভাষা (HSK1-3) শেখার পরিপূর্ণ কোর্স</h2>
+                        <p class="text">৩ মাসের কোর্স মাত্র ৪৫০০ টাকা,রেজিস্ট্রেশন মাত্র ১৪৯৯ টাকা,প্রতি মাসে মাত্র ১৪৯৯ টাকা Installment এ ৩ মাসে Full কোর্স কমপ্লিট{সীমিত সময়ের Discount}</p>
                         <div class="reviews flex">
                             <p>Avg. Rating : 4.9</p>
                             <p>★★★★★</p>
@@ -87,7 +87,7 @@
                 </ul>
                 <br><br>
                 <div class="section_header">
-                    <h3>চাইনিজ ভাষা শিখার পরিপূর্ণ কোর্স</h3>
+                    <h3>চাইনিজ ভাষা শেখার পরিপূর্ণ কোর্স</h3>
                     <br>
                     <div class="container my-4">
   <h5 class="fw-bold mb-3">চাইনিজ ভাষা শেখার পরিপূর্ণ কোর্স</h5>
