--- a/template/templates/template/french.html
+++ b/template/templates/template/french.html
@@ -4,8 +4,8 @@
             <div class="container">
                 <div class="hero_data">
                     <div class="hero_text">
-                        <h2>IELTS শেখার পরিপূর্ণ কোর্স</h2>
-                        <p class="text">এটি একটি পূর্ণাঙ্গ কোর্স যা আপনাকে IELTS-এর সব প্রধান দক্ষতা সহজে আয়ত্ত করতে সাহায্য করবে – রিডিং, স্পিকিং, লিসেনিং এবং রাইটিং। এই এক কোর্সেই আপনি IELTS পরীক্ষার জন্য প্রয়োজনীয় চারটি স্কিলই আয়ত্ত করতে পারবেন।"</p>
+                        <h2>ফ্রেঞ্চ ভাষা {A1,A2} শেখার পরিপূর্ণ কোর্স</h2>
+                        <p class="text">একটি পূর্ণাঙ্গ কোর্স, যা আপনাকে ফ্রেঞ্চ ভাষার সব প্রধান ক্ষেত্রগুলো, সহজে আয়ত্ত করতে সাহায্য করবে – ফ্রেঞ্চ পড়া, কথা বলা, শোনা, এবং লেখা। এই এক কোর্সেই, আপনি ফ্রেঞ্চ ভাষার সব দক্ষতা অর্জন করতে পারবেন।</p>
                         <div class="reviews flex">
                             <p>Avg. Rating : 4.8</p>
                             <p>★★★★★</p>
