french language course

--- a/template/templates/template/french.html
+++ b/template/templates/template/french.html
@@ -7,7 +7,7 @@
                         <h2>ফ্রেঞ্চ ভাষা {A1,A2} শেখার পরিপূর্ণ কোর্স</h2>
                         <p class="text">একটি পূর্ণাঙ্গ কোর্স, যা আপনাকে ফ্রেঞ্চ ভাষার সব প্রধান ক্ষেত্রগুলো, সহজে আয়ত্ত করতে সাহায্য করবে – ফ্রেঞ্চ পড়া, কথা বলা, শোনা, এবং লেখা। এই এক কোর্সেই, আপনি ফ্রেঞ্চ ভাষার সব দক্ষতা অর্জন করতে পারবেন।</p>
                         <div class="reviews flex">
-                            <p>Avg. Rating : 4.8</p>
+                            <p>Avg. Rating : 4.9</p>
                             <p>★★★★★</p>
                             <!-- <ul class="flex">
                                 <li>
@@ -33,13 +33,13 @@
                             <div>
                                 <h4>Anonna Mohammad</h4>
                                 
-                                <p>Certified IELTS language Teacher,</p>
-                                <p>Band Score 7.5,8.0</p>
+                                <p>Certified French language Teacher,</p>
+                                
                             </div>
                         </div>
                     </div>
                     <div class="hero_video">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/4flPCY2Osfk?si=5hBkOjK15KNYCH-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/ngDdV1N4p4k?si=iFs1YNMJnndrhsTq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
